# aws-serverless-rag-governance-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/services/: gemini_llm.py  ingestion.py  projects.py  rag.py  s3_client.py
deploy/: README.md  docuchat-api.service  docuchat-ui.service  setup_ec2.sh
docs/: BACKLOG.md  BRANCHING_STRATEGY.md  BUSINESS_EXPLANATION_PLAYBOOK.md  EDGE_ROADMAP_NOW_NEXT_LATER.md  PRODUCT_SCOPE_3W_DOCUCHAT_PLATFORM.md  TESTING_STRATEGY.md
scripts/: bootstrap_project.py  run_regression.py  sync_from_s3.py
tests/integration/: test_api.py  test_rag_pipeline.py
tests/unit/: test_config.py
ui/: app.py
