[project]
name = "docuchat-rag"
version = "0.1.0"
description = "AI-powered document Q&A using LlamaIndex, FastAPI, and Streamlit"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core RAG Framework
    "llama-index>=0.10.0,<0.12.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    
    # Backend
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Frontend
    "streamlit>=1.30.0",
    "requests>=2.31.0",
    
    # Vector Store (pinned for compatibility)
    "chromadb>=0.4.22,<0.5.0",
    
    # Document Processing
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    
    # Utilities
    "python-dotenv>=1.0.0",

    # LLM Providers
    "google-generativeai>=0.7.0",

    # AWS SDK
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
